src/frontend/src/app/home-page/popups/profil/match-history/match-history.component.css
/* firefox */
.scroller {
  width: 300px;
  height: 100px;
}

/* Safari, Chrome, IE */
 ::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-track {
  background: #1A202C;
}

::-webkit-scrollbar-thumb {
  background: #44526F;
}

/* History */
.history-content {
  height: 100%;
  width: 100%;
  border-radius: 1em;
  overflow-y: scroll;
  scrollbar-color: #44526F #1a202c;
  scrollbar-width: thin;
  overflow-x: hidden;
}

.history-items {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  height: fit-content;
  margin: 0px;
  padding: 0px;
}

.history-item {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 750px;
  height: 64px;
  border-radius: 1em;
  margin: 2px;
  transition: 0.3s;
  background-color: #44526F;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
}

.history-item:hover {
  background-color: #1A202C;
}

.history-item-player {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  width: 30%;
  height: 64px;
  border-radius: 1em;
  background-color: #1A202C;
}

.history-item-avatar {
  height: 48px;
  width: 48px;
  border-radius: 100%;
}

.history-item-scoreboard {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  width: 40%;
  height: 64px;
}

.history-item-score {
  text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
  text-align: center;
  font-size: 48px;
  font-weight: 900;
  width: 30%;
}

